# mango-music

./: CMakeLists.txt  README.md  bilibili.py  databasemanager.cpp  databasemanager.h  dbManager.cpp  dbManager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
